--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="image-caption">2024</div>
       </div>
       <div>
-        <img src="静静的午后/7.jpg" alt="Image 3">
+        <img src="https://github.com/Jj20041003/jinjindewuhou.github.io/blob/main/%E9%9D%99%E9%9D%99%E7%9A%84%E5%8D%88%E5%90%8E/7.JPG?raw=true" alt="Image 3">
         <div class="image-caption">2024</div>
       </div>
       <div>
