图片链接修改
图片修改

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <div class="image-container">
     <div class="image-list">
       <div>
-        <img src="1.jpg" alt="Image 1">
+        <img src="静静的午后/1.jpg" alt="Image 1">
         <div class="image-caption">2024</div>
       </div>
       <div>
@@ -119,7 +119,8 @@
         <div class="image-caption">2024</div>
       </div>
       <div>
-        <img src="静静的午后/8.jpg" alt="Image 4">
+        <img src="https://github.com/Jj20041003/jinjindewuhou.github.io/blob/main/%E9%9D%99%E9%9D%99%E7%9A%84%E5%8D%88%E5%90%8E/8.JPG?raw=true
+g" alt="Image 4">
         <div class="image-caption">2024</div>
       </div>
       <div>
@@ -142,11 +143,12 @@
         <div class="image-caption">2024</div>
       <div>
       </div>
-        <img src="静静的午后/14.jpg" alt="Image 5">
+        <img src="https://github.com/Jj20041003/jinjindewuhou.github.io/blob/main/%E9%9D%99%E9%9D%99%E7%9A%84%E5%8D%88%E5%90%8E/14.JPG?raw=true" alt="Image 5">
         <div class="image-caption">2024</div>
       <div>
       </div>
-        <img src="静静的午后/15.jpg" alt="Image 5">
+        <img src="https://github.com/Jj20041003/jinjindewuhou.github.io/blob/main/%E9%9D%99%E9%9D%99%E7%9A%84%E5%8D%88%E5%90%8E/15.JPG?raw=true
+" alt="Image 5">
         <div class="image-caption">2024</div>
       <div>
       </div>
