--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
   <div class="sidebar">
     <h1>JinJing</h1>
     <h2>personal works</h2>
-    <a href="http://127.0.0.1:5500/%E9%9D%99%E9%9D%99%E7%9A%84%E5%8D%88%E5%90%8E.html" class="fixed-underline">静静的午后</a>
-    <a href="http://127.0.0.1:5500/%E6%91%A9%E6%89%98%E8%BD%A6%E7%A9%BF%E8%BF%87%E6%B2%A1%E6%9C%89%E5%86%AC%E5%A4%A9%E7%9A%84%E5%9F%8E%E5%B8%82.html">摩托車穿過沒有冬天的城市</a>
-    <a href="http://127.0.0.1:5500/Meadow.html">Meadow</a>
-    <a href="http://127.0.0.1:5500/%E9%A3%9E%E9%A9%B0.html">飛馳在路上</a>
+    <a href="https://jj20041003.github.io/jinjindewuhou.github.io/">静静的午后</a>
+    <a href="https://jj20041003.github.io/Indonesia/">摩托車穿過沒有冬天的城市</a>
+    <a href="https://jj20041003.github.io/Meadow/">Meadow</a>
+    <a href="https://jj20041003.github.io/feichi/">飛馳在路上</a>
   </div>
   <div class="image-container">
     <div class="image-list">
