--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="sidebar">
     <h1>JinJing</h1>
     <h2>personal works</h2>
-    <a href="https://jj20041003.github.io/jinjindewuhou.github.io/" class="fixed-underline>静静的午后</a>
+    <a href="https://jj20041003.github.io/jinjindewuhou.github.io/" class="fixed-underline">静静的午后</a>
     <a href="https://jj20041003.github.io/Indonesia/">摩托車穿過沒有冬天的城市</a>
     <a href="https://jj20041003.github.io/Meadow/">Meadow</a>
     <a href="https://jj20041003.github.io/feichi/">飛馳在路上</a>
